fe-learner/dev/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gened-fe-learner-deployment
  namespace: gened-fe-learner
spec:
  replicas: 1
  selector:
    matchLabels:
      app: gened-fe-learner
  template:
    metadata:
      labels:
        app: gened-fe-learner
    spec:
      containers:
        - name: gened-fe-learner-container
          image: ghcr.io/fcodemonday/poc-action:latest
          ports:
            - containerPort: 3000
