fe-learner/dev/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: gened-fe-learner-service
  namespace: gened-fe-dev
spec:
  selector:
    app: gened-fe-learner-container
  type: ClusterIP
  ports:
    - name: http
      port: 3000
      protocol: TCP
      targetPort: http
